--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "employeeConnection.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^7.3.3",
-    "mysql": "^2.18.1"
+    "inquirer": "^7.0.0",
+    "mysql": "^2.17.1"
   }
 }
